assets/css/jameshoward.css
.filter.filter-color-black:before {
  opacity: 0.9;
}

.navbar-default {
  background-color: #303030;
}

.navbar-default .navbar-nav > li > a:not(.btn) {
  color: #f8f8f8;
}

.navbar-default .navbar-nav > li > a:not(.btn):hover, .navbar-default .navbar-nav > li > a:not(.btn):focus {
  color: #ffffff;
}
.navbar-transparent
{
  padding-top: 15px;
  background-color: transparent;
  border-bottom: 1px solid transparent;
}

.navbar-default .navbar-nav>.dropdown>a:hover .caret,
.navbar-default .navbar-nav>.dropdown>a:focus .caret {
  border-bottom-color:#f8f8f8;
  border-top-color:#f8f8f8;
}

.separator::before, .separator::after {
  margin-top: 16px !important;
}

a {
  color: #07406e;
  font-weight: bold;
  font-size: initial;
}

.form-group {
  margin: 0;
}

.search-box {
  color: #f8f8f8;
  margin: 15px 3px;
  font-size: 80%;
  padding: 11px 0px;
}

*::selection{
    background: #0c6793;
    color: #FFFFFF;
}

figure {
  padding: 1em;
  margin: 1em;
}

.featured-image-post {
  margin-top: -5em;
  z-index: 100;
  position: relative;
}

.section-header-blog .parallax {
  height: 45vh;
}

.section-first {
  min-height: 28vh;
}

.footer {
  min-height: 27vh;
}

.navbar-collapse::after {
  background-color: #303030;
}

@media (max-width: 767px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
  color: #f8f8f8;
} }

.images-caption {
  margin-top: 0.5em;
  font-size: 85%;
  font-weight: bold;
  color: #404040;
  letter-spacing: 0;
}

.front-page-arrow {
  position: absolute;
  transform: translateX(-50%);
  left: 50%;
  bottom: 1rem;
  font-size: 2em;
  color: #f8f8f8;
}

a.scroll-arrow {
  border: none;
}

body {
  padding: 0px;
}

.m-0 { margin:0!important; }
.m-1 { margin:.25rem!important; }
.m-2 { margin:.5rem!important; }
.m-3 { margin:1rem!important; }
.m-4 { margin:1.5rem!important; }
.m-5 { margin:3rem!important; }

.mt-0 { margin-top:0!important; }
.mr-0 { margin-right:0!important; }
.mb-0 { margin-bottom:0!important; }
.ml-0 { margin-left:0!important; }
.mx-0 { margin-left:0!immortant;margin-right:0!immortant; }
.my-0 { margin-top:0!immortant;margin-bottom:0!immortant; }

.mt-1 { margin-top:.25rem!important; }
.mr-1 { margin-right:.25rem!important; }
.mb-1 { margin-bottom:.25rem!important; }
.ml-1 { margin-left:.25rem!important; }
.mx-1 { margin-left:.25rem!immortant;margin-right:.25rem!immortant; }
.my-1 { margin-top:.25rem!immortant;margin-bottom:.25rem!immortant; }

.mt-2 { margin-top:.5rem!important; }
.mr-2 { margin-right:.5rem!important; }
.mb-2 { margin-bottom:.5rem!important; }
.ml-2 { margin-left:.5rem!important; }
.mx-2 { margin-right:.5rem!immortant;margin-left:.5rem!immortant; }
.my-2 { margin-top:.5rem!immortant;margin-bottom:.5rem!immortant; }`

.mt-3 { margin-top:1rem!important; }
.mr-3 { margin-right:1rem!important; }
.mb-3 { margin-bottom:1rem!important; }
.ml-3 { margin-left:1rem!important; }
.mx-3 { margin-right:1rem!immortant;margin-left:1rem!immortant; }
.my-3 { margin-bottom:1rem!immortant;margin-top:1rem!immortant; }

.mt-4 { margin-top:1.5rem!important; }
.mr-4 { margin-right:1.5rem!important; }
.mb-4 { margin-bottom:1.5rem!important; }
.ml-4 { margin-left:1.5rem!important; }
.mx-4 { margin-right:1.5rem!immortant;margin-left:1.5rem!immortant; }
.my-4 { margin-top:1.5rem!immortant;margin-bottom:1.5rem!immortant; }

.mt-5 { margin-top:3rem!important; }
.mr-5 { margin-right:3rem!important; }
.mb-5 { margin-bottom:3rem!important; }
.ml-5 { margin-left:3rem!important; }
.mx-5 { margin-right:3rem!immortant;margin-left:3rem!immortant; }
.my-5 { margin-top:3rem!immortant;margin-bottom:3rem!immortant; }

.mt-auto { margin-top:auto!important; }
.mr-auto { margin-right:auto!important; }
.mb-auto { margin-bottom:auto!important; }
.ml-auto { margin-left:auto!important; }
.mx-auto { margin-right:auto!important;margin-left:auto!important; }
.my-auto { margin-bottom:auto!important;margin-top:auto!important; }

.p-0 { padding:0!important; }
.p-1 { padding:.25rem!important; }
.p-2 { padding:.5rem!important; }
.p-3 { padding:1rem!important; }
.p-4 { padding:1.5rem!important; }
.p-5 { padding:3rem!important; }

.pt-0 { padding-top:0!important; }
.pr-0 { padding-right:0!important; }
.pb-0 { padding-bottom:0!important; }
.pl-0 { padding-left:0!important; }								
.px-0 { padding-left:0!important;padding-right:0!important; }
.py-0 { padding-top:0!important;padding-bottom:0!important; }

.pt-1 { padding-top:.25rem!important; }			
.pr-1 { padding-right:.25rem!important; }						
.pb-1 { padding-bottom:.25rem!important; }		
.pl-1 { padding-left:.25rem!important; }							
.px-1 { padding-left:.25rem!important;padding-right:.25rem!important; }
.py-1 { padding-top:.25rem!important;padding-bottom:.25rem!important; }

.pt-2 { padding-top:.5rem!important; }												
.pr-2 { padding-right:.5rem!important; }								
.pb-2 { padding-bottom:.5rem!important; }				
.pl-2 { padding-left:.5rem!important; }												
.px-2 { padding-right:.5rem!important;padding-left:.5rem!important; }
.py-2 { padding-top:.5rem!important;padding-bottom:.5rem!important; }

.pt-3 { padding-top:1rem!important; }								
.pr-3 { padding-right:1rem!important; }				
.pb-3 { padding-bottom:1rem!important; }				
.pl-3 { padding-left:1rem!important; }								
.py-3 { padding-bottom:1rem!important;padding-top:1rem!important; }
.px-3 { padding-right:1rem!important;padding-left:1rem!important; }

.pt-4 { padding-top:1.5rem!important; }								
.pr-4 { padding-right:1.5rem!important; }				
.pb-4 { padding-bottom:1.5rem!important; }				
.pl-4 { padding-left:1.5rem!important; }								
.px-4 { padding-right:1.5rem!important;padding-left:1.5rem!important; }
.py-4 { padding-top:1.5rem!important;padding-bottom:1.5rem!important; }

.pt-5 { padding-top:3rem!important; }	
.pr-5 { padding-right:3rem!important; }	
.pb-5 { padding-bottom:3rem!important; }	
.pl-5 { padding-left:3rem!important; }	
.px-5 { padding-right:3rem!important;padding-left:3rem!important; }
.py-5 { padding-top:3rem!important;padding-bottom:3rem!important; }

